# SqlAlchemy

./: LICENSE  docker-compose.yml
sql-alchemy/: .dockerignore  Dockerfile  README.rst  pyproject.toml  requirements.txt
sql-alchemy/data/: Dockerfile  execute-sql.sh  student-table.sql
sql-alchemy/sql_alchemy/: database.py  main.py  models.py  student_repository.py
sql-alchemy/tests/: test_ideia.py  test_student_repository.py
