[tool.poetry]
name = "sql-alchemy"
version = "0.1.0"
description = ""
authors = ["ChristopherNothmann-lab <christopher.nothmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-SQLAlchemy = "^2.5.1"
PyMySQL = "^1.0.2"
pytest = "^5.2"
pytest-mock = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
